expected/main/core/structs/structs16.err
ERROR: "actual/main/core/structs/structs16.lc", line 2
struct Bad4 [ x :: Bad4 | y :: Stored Word ]
^
Size of y is 4 less than expected

ERROR: Aborting after previously reported error

